added jackhenry and removed walmart

--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
       <!-- <div class="col-lg-4 ml-auto"> -->
       <div class="lead" align=center>
         <p class="lead">
-          This website is a way to showcase my professional experience, accomplishments, and personal growth. I have
-          worked the past 2 years as a System Administrator. In addition, I have worked technical support for 3 years
+          This website is a way to showcase my professional experience, accomplishments, and personal growth. For the
+          past year, I've worked as an Applications Engineer, as a System Administrator fo4 3 years prior. In addition,
+          I have worked technical support for 3 years
           and retail Customer Service for 5.<br> I am compitent in both Windows and Linux. I am an advocate of open
-          source, and I like to contribute by reporting bugs, or submitting pull requests. I'm comfortable programming
+          source. I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
+          programming
           in C#, Java, and Powershell, however I am confident in my ability to learn any syntax. If there is an
           opportunity to automate something, I will make an attempt to do so, using whatever tools available.<br>
         </p>
@@ -146,6 +148,20 @@
 
       <!-- Portfolio Grid Items -->
       <div class="row">
+
+
+        <!-- Portfolio Item 4 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div
+              class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100 bg-secondary">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>Jack Henry and Associates</h1>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/jackhenry.png" alt="">
+          </div>
+        </div>
 
         <!-- Portfolio Item 6 -->
         <div class="col-md-6 col-lg-4">
@@ -201,18 +217,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 4 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-            <div
-              class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100 bg-secondary">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <h1 class="masthead-heading text-uppercase fa-1x mb-0">Work History:<br>Wal-Mart</h1>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/walmart.png" alt="">
-          </div>
-        </div>
+
 
         <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4">
@@ -623,8 +628,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cashier / Customer Service
-                  Associate<br>Nov 2012 -> May 2015</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Application Engineer III<br>Sep
+                  2023 -> Current</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -634,7 +639,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <h2>Wal-Mart</h2><br>
+                <h2>Jack Henry and Associates</h2><br>
                 <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt=""> -->
                 <!-- Portfolio Modal - Text -->
                 <p>
@@ -776,7 +781,7 @@
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">System Administrator<br>Nov 2019 ->
-                  Current</h2>
+                  Sep 2023</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -792,21 +797,25 @@
                 <!-- Portfolio Modal - Text -->
                 <div align=left>
                   <ul>
-                    <li>Work with a small team to manage and support servers and network infrastructure across 20+
+                    <li>Worked with a small team to manage and support servers and network infrastructure across 20+
                       locations.</li>
-                      <li>Install and maintain several Linux machines running Redhat and Ubuntu. Tasks include script development and deployment, resource monitoring, and user access management.</li>
-                      <li>Manage several Webservers running on Linux with Apache, and Windows with IIS</li>
-                      <li>Utilize best security practices by limiting resource access with security groups, SSH keys and SSL certs, and 2fa.
-                      </li>
-                    <li>Manage mobile devices with Intune by applying configuration profiles to restrict usage, install
+                    <li>Installed and maintain several Linux machines running Redhat and Ubuntu. Tasks include script
+                      development and deployment, resource monitoring, and user access management.</li>
+                    <li>Managed several Webservers running on Linux with Apache, and Windows with IIS</li>
+                    <li>Utilized best security practices by limiting resource access with security groups, SSH keys and
+                      SSL certs, and 2fa.
+                    </li>
+                    <li>Managed mobile devices with Intune by applying configuration profiles to restrict usage, install
                       apps, and change system settings</li>
-                    <li>Ensure system updates are deployed in a timely fashion to protect against latest vulnerabilities
+                    <li>Ensured system updates are deployed in a timely fashion to protect against latest
+                      vulnerabilities
                     </li>
 
-                    <li>Manage end users' access to a variety of network resources including shared storage, and remote
+                    <li>Managed end users' access to a variety of network resources including shared storage, and remote
                       application logins</li>
 
-                    <li>Write and deploy scripts using Powerwshell to automate tasks, push system configurations and install applications</li>
+                    <li>Wrote and deployed scripts using Powerwshell to automate tasks, push system configurations and
+                      install applications</li>
                     <li>Consulted and assisted with implementing a complete redesign of the entire IT procedures
                       services, and infrastructure.</li>
 
@@ -816,10 +825,11 @@
                     <li>Helped recover from a ransomware attack by deploying decryption keys and restoring backups.
                     </li>
 
-                    <li>Assisted with a full email migration from Rackspace to Exchange 365 by deploying restoration
-                      scripts, and providing end users adequate documentation on how to use the new system.</li>
+                    <li>Assisted with a full email migration by deploying restoration scripts, and providing end users
+                      adequate documentation on how to use the new system.</li>
 
-                    <li>Created a GUI tool to automatically create and manage end user accounts, increasing efficiency by 90%</li>
+                    <li>Created a GUI tool in Powershell to automatically create and manage end user accounts, increasing efficiency
+                      by 90%</li>
                   </ul>
                 </div>
               </div>
@@ -852,4 +862,4 @@
 
 </body>
 
-</html>
+</html>development
