updated description and dates

--- a/index.html
+++ b/index.html
@@ -644,40 +644,15 @@
                 <!-- Portfolio Modal - Text -->
                 <p>
                 <div align=left>
-                  <div class="lead"><i class="fa fa-terminal"></i>Cashier (Nov 2012 - Jun 2013)</div>
-                  <p>
                   <ul>
-                    <li>Processed customer transactions quickly and accurately, handling cash, credit, and debit
-                      payments</li>
-                    <li>Provided excellent customer service by answering questions and addressing concerns with a
-                      professional and friendly attitude</li>
-                    <li>Maintained a clean and organized work environment by regularly stocking supplies and cleaning
-                      equipment</li>
-                    <li>Assisted customers with locating products and making product suggestions</li>
-                    <li>Followed all cash handling procedures and security policies to ensure the safety of cash and
-                      other assets</li>
-                    <li>Collaborated with team members to maintain an efficient and effective workflow</li>
-                    <li>Assisted with store-closing tasks, such as counting cash drawers and completing deposit slips
-                    </li>
-                    <li>Adhered to all company policies and procedures, including those related to customer service,
-                      safety, and security.</li>
+                    <li>Acted as a subject matter expert for a proprietary banking software.</li>
+                    <li>Developed tools to assist in backing up and restoring SQL data with an increase of 25%
+                      efficiency.</li>
+                    <li>Assisted in the development of a custom installer for the software using Powershell.</li>
+                    <li>Utilized Windows ADFS and MSSQL to assist Financial Institutions with on-premises server
+                      migrations for the proprietary software.</li>
                   </ul>
-                  </p>
-                  <div class="lead"><i class="fa fa-terminal"></i> Customer Service Associate (Jun 2013 - May 2015)
-                  </div>
-                  <p>
-                    <!-- directives:[] -->
-                  <ul>
-                    <li>Operated cash registers, money order machines, and other equipment as necessary</li>
-                    <li>Followed all established policies and procedures to maintain a secure and accurate cash drawer
-                    </li>
-                    <li>Communicated with management and other staff to resolve customer complaints and issues</li>
-                    <li>Maintained knowledge of current promotions and sales to better assist customers.</li>
-                    <li>Managed and trained new employees on customer service techniques and procedures</li>
-                    <li>Assisted with scheduling and coverage for the customer service desk and money center</li>
-                    <li>Maintained accurate records of financial transactions for the department.</li>
-                  </ul>
-                  </p>
+
                 </div>
                 </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -828,7 +803,8 @@
                     <li>Assisted with a full email migration by deploying restoration scripts, and providing end users
                       adequate documentation on how to use the new system.</li>
 
-                    <li>Created a GUI tool in Powershell to automatically create and manage end user accounts, increasing efficiency
+                    <li>Created a GUI tool in Powershell to automatically create and manage end user accounts,
+                      increasing efficiency
                       by 90%</li>
                   </ul>
                 </div>
