added file and removed download button

--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
             <p class="lead"></p>
           </div> -->
     </div>
-    <!-- About Section Button -->
-    <div class="text-center mt-4">
+    
+    <!-- DOWNLOAD RESUME BUTTON -->
+    <!-- <div class="text-center mt-4">
       <a target="_blank" class="btn btn-xl btn-outline-secondary" href="resources/joshua.bagwell.resume.pdf">
         <i class="fas fa-download mr-2"></i>
         Resume Download
       </a>
     </div>
-    </div>
+    </div> -->
   </section>
 
   <!-- Portfolio Section -->
