--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="lead" align=center>
         <p class="lead">
           This website is a way to showcase my professional experience, accomplishments, and personal growth. For the
-          past year, I've worked as an Applications Engineer, as a System Administrator fo4 3 years prior. In addition,
+          past year, I've worked as an Applications Engineer, as a System Administrator for 3 years prior. In addition,
           I have worked technical support for 3 years
           and retail Customer Service for 5.<br> I am compitent in both Windows and Linux. I am an advocate of open
           source. I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
@@ -120,7 +120,7 @@
             <p class="lead"></p>
           </div> -->
     </div>
-    
+
     <!-- DOWNLOAD RESUME BUTTON -->
     <!-- <div class="text-center mt-4">
       <a target="_blank" class="btn btn-xl btn-outline-secondary" href="resources/joshua.bagwell.resume.pdf">
