updated resume file and download link

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
     </div>
 
     <!-- DOWNLOAD RESUME BUTTON -->
-    <!-- <div class="text-center mt-4">
-      <a target="_blank" class="btn btn-xl btn-outline-secondary" href="resources/joshua.bagwell.resume.pdf">
+    <div class="text-center mt-4">
+      <a target="_blank" class="btn btn-xl btn-outline-secondary" href="resources/JOSHUA-D-BAGWELL.pdf">
         <i class="fas fa-download mr-2"></i>
         Resume Download
       </a>
     </div>
-    </div> -->
+    </div>
   </section>
 
   <!-- Portfolio Section -->
