--- a/resources/resume.html
+++ b/resources/resume.html
@@ -1,61 +1,117 @@
 <!-- directives:[] -->
-<div id="content"><h1 id="joshua-d-bagwell">JOSHUA D BAGWELL</h1>
-    <h2 id="contact-info">Contact Info</h2>
-    <ul>
-    <li><strong>Phone Number:</strong> (770)-685-9926</li>
-    <li><strong>Email Address:</strong> <a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#x6a;&#111;&#x73;&#x68;&#117;&#x61;&#46;&#100;&#x2e;&#98;&#97;&#103;&#119;&#101;&#108;&#108;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#111;&#x73;&#x68;&#x75;&#x61;&#x2e;&#100;&#46;&#98;&#x61;&#103;&#x77;&#x65;&#108;&#x6c;&#64;&#103;&#109;&#x61;&#x69;&#108;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
-    <li><strong>Website:</strong> <a href="https://jbagwell27.github.io">jbagwell27.github.io</a></li>
-    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/joshuabagwell/">linkedin.com/in/joshuabagwell/</a></li>
-    </ul>
-    <h2 id="professional-summary">Professional Summary</h2>
-    <p>Highly skilled System Administrator with experience in managing and supporting servers and network infrastructure. Proficient in Linux administration, scripting, and troubleshooting. Strong problem-solving abilities and a track record of implementing efficient IT procedures and services.</p>
-    <h2 id="profressional-experience">Profressional Experience</h2>
-    <h3 id="jack-henry-and-associates---application-engineer-iii">Jack Henry and Associates - Application Engineer III</h3>
-    <p><strong>Dates of Employment:</strong> September 2023 - Current</p>
-    <ul>
-    <li>Acted as a subject matter expert for a proprietary banking software.</li>
-    <li>Developed tools to assist in backing up and restoring SQL data with an increase of 25% efficiency.</li>
-    <li>Assisted in the development of a custom installer for the software using Powershell.</li>
-    <li>Utilized Windows ADFS, IIS, and MSSQL to assist Financial Institutions with on-premises server migrations for the proprietary software.</li>
-    </ul>
-    <h3 id="premier-transportation---system-administrator">Premier Transportation - System Administrator</h3>
-    <p><strong>Dates of Employment:</strong> November 2020 - September 2023</p>
-    <ul>
-    <li>Worked with a small internal IT team to manage and support servers and network infrastructure across 20+ locations.</li>
-    <li>Installed and maintain several Linux machines running Redhat and Ubuntu. Tasks include script development and deployment, resource monitoring, and user access management.</li>
-    <li>Utilized best security practices by limiting resource access with security groups, SSH keys, and SSL certificates.</li>
-    <li>Monitored and manage several web servers running Apache on Linux and IIS on Windows.</li>
-    <li>Implemented a complete redesign of the department's procedures, services, and infrastructure, resulting in the deployment of several new services, including MDM, a fully managed AV suite, a ticketing system, and comprehensive documentation, where none previously existed.</li>
-    <li>Supported end users and C-Level exectutives in a Windows environment with a variety of issues ranging from configuring phones to troubleshooting network and software issues.</li>
-    </ul>
-    <h3 id="kavo-kerr---technical-support-analyst">Kavo Kerr - Technical Support Analyst</h3>
-    <p><strong>Dates of Employment:</strong> March 2019 - October 2020</p>
-    <ul>
-    <li>Assisted customers in a call center environment with troubleshooting various types of dental equipment and its related software, resulting in high first call resolution rates</li>
-    <li>Developed and distributed tools to assist in the troubleshooting and installation of software as well as automating ticket creation and note taking resulting in improved workflow and increased productivity for the entire company.</li>
-    <li>Assisted in training new team members on technical support procedures and best practices</li>
-    </ul>
-    <h3 id="carestream-dental---technical-solutions-rep-iii">Carestream Dental - Technical Solutions Rep I/II</h3>
-    <p><strong>Dates of Employment:</strong> June 2017 - February 2019</p>
-    <ul>
-    <li>Led a team of level 1 technical support reprecertssentatives, providing mentorship and training to improve overall performance and customer satisfaction.</li>
-    <li>Developed and maintained technical documentation and knowledge base resources, resulting in a decrease in call volume and an increase in first call resolution rate.</li>
-    <li>Written and distributed batch scripts to simplify tasks such as registry edits, backups and migrations</li>
-    <li>Provided first call resolution for customer inquiries, escalating more complex issues to level 2 support as needed</li>
-    <li>Communicated effectively with customers to provide clear and concise instructions for resolving issues</li>
-    <li>Implemented a new troubleshooting guide for common technical issues, reducing resolution time.</li>
-    </ul>
-    <h2 id="education">EDUCATION</h2>
-    <h3 id="kennesaw-state-university">Kennesaw State University</h3>
-    <p><strong>Dates of Attendance:</strong> August 2014 - February 2017  <br />
-    Bachelor's of Science in Computer Science</p>
-    <h3 id="neumont-university">Neumont University</h3>
-    <p><strong>Dates of Attendance:</strong> October 2010 - August 2012  <br />
-    Bachelor's of Science in Computer Science</p>
-    <h2 id="professional-and-personal-achievements">Professional and Personal Achievements</h2>
-    <ul>
-    <li>At Kavo Kerr, developed and deployed a fully automated installer for the software where none previously existed, increasing the install team's efficiency by 50%.</li>
-    <li>At Premier Transportation, developed a PowerShell GUI that automated the process of creating new end-users, resulting in a 95% efficiency increase.</li>
-    <li>Contributed to several open source projects by providing bug fixes, QA testing, and documentation improvements, enhancing software stability and user experience.</li>
-    <li>Participated in a vendor's Customer Advisory Board, delivering valuable feedback and conducting in-depth testing of new products and features, which contributed to product enhancements and better alignment with customer needs.</li>
-    </ul></div>
+<html>
+
+<head>
+    <link rel="shortcut icon" href="img/terminal.ico" type="image/x-icon">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Digital Resume - Joshua D Bagwell</title>
+
+    <!-- Custom fonts for this theme -->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css">
+
+    <!-- Theme CSS -->
+    <link href="css/freelancer.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+
+    <div id="content">
+        <h1 id="joshua-d-bagwell">JOSHUA D BAGWELL</h1>
+        <h2 id="contact-info">Contact Info</h2>
+        <ul>
+            <li><strong>Phone Number:</strong> (770)-685-9926</li>
+            <li><strong>Email Address:</strong> <a
+                    href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#x6a;&#111;&#x73;&#x68;&#117;&#x61;&#46;&#100;&#x2e;&#98;&#97;&#103;&#119;&#101;&#108;&#108;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#111;&#x73;&#x68;&#x75;&#x61;&#x2e;&#100;&#46;&#98;&#x61;&#103;&#x77;&#x65;&#108;&#x6c;&#64;&#103;&#109;&#x61;&#x69;&#108;&#x2e;&#x63;&#x6f;&#x6d;</a>
+            </li>
+            <li><strong>Website:</strong> <a href="https://jbagwell27.github.io">jbagwell27.github.io</a></li>
+            <li><strong>LinkedIn:</strong> <a
+                    href="https://www.linkedin.com/in/joshuabagwell/">linkedin.com/in/joshuabagwell/</a></li>
+        </ul>
+        <h2 id="professional-summary">Professional Summary</h2>
+        <p>Highly skilled System Administrator with experience in managing and supporting servers and network
+            infrastructure. Proficient in Linux administration, scripting, and troubleshooting. Strong problem-solving
+            abilities and a track record of implementing efficient IT procedures and services.</p>
+        <h2 id="profressional-experience">Profressional Experience</h2>
+        <h3 id="jack-henry-and-associates---application-engineer-iii">Jack Henry and Associates - Application Engineer
+            III</h3>
+        <p><strong>Dates of Employment:</strong> September 2023 - Current</p>
+        <ul>
+            <li>Acted as a subject matter expert for a proprietary banking software.</li>
+            <li>Developed tools to assist in backing up and restoring SQL data with an increase of 25% efficiency.</li>
+            <li>Assisted in the development of a custom installer for the software using Powershell.</li>
+            <li>Utilized Windows ADFS, IIS, and MSSQL to assist Financial Institutions with on-premises server
+                migrations for the proprietary software.</li>
+        </ul>
+        <h3 id="premier-transportation---system-administrator">Premier Transportation - System Administrator</h3>
+        <p><strong>Dates of Employment:</strong> November 2020 - September 2023</p>
+        <ul>
+            <li>Worked with a small internal IT team to manage and support servers and network infrastructure across 20+
+                locations.</li>
+            <li>Installed and maintain several Linux machines running Redhat and Ubuntu. Tasks include script
+                development and deployment, resource monitoring, and user access management.</li>
+            <li>Utilized best security practices by limiting resource access with security groups, SSH keys, and SSL
+                certificates.</li>
+            <li>Monitored and manage several web servers running Apache on Linux and IIS on Windows.</li>
+            <li>Implemented a complete redesign of the department's procedures, services, and infrastructure, resulting
+                in the deployment of several new services, including MDM, a fully managed AV suite, a ticketing system,
+                and comprehensive documentation, where none previously existed.</li>
+            <li>Supported end users and C-Level exectutives in a Windows environment with a variety of issues ranging
+                from configuring phones to troubleshooting network and software issues.</li>
+        </ul>
+        <h3 id="kavo-kerr---technical-support-analyst">Kavo Kerr - Technical Support Analyst</h3>
+        <p><strong>Dates of Employment:</strong> March 2019 - October 2020</p>
+        <ul>
+            <li>Assisted customers in a call center environment with troubleshooting various types of dental equipment
+                and its related software, resulting in high first call resolution rates</li>
+            <li>Developed and distributed tools to assist in the troubleshooting and installation of software as well as
+                automating ticket creation and note taking resulting in improved workflow and increased productivity for
+                the entire company.</li>
+            <li>Assisted in training new team members on technical support procedures and best practices</li>
+        </ul>
+        <h3 id="carestream-dental---technical-solutions-rep-iii">Carestream Dental - Technical Solutions Rep I/II</h3>
+        <p><strong>Dates of Employment:</strong> June 2017 - February 2019</p>
+        <ul>
+            <li>Led a team of level 1 technical support reprecertssentatives, providing mentorship and training to
+                improve overall performance and customer satisfaction.</li>
+            <li>Developed and maintained technical documentation and knowledge base resources, resulting in a decrease
+                in call volume and an increase in first call resolution rate.</li>
+            <li>Written and distributed batch scripts to simplify tasks such as registry edits, backups and migrations
+            </li>
+            <li>Provided first call resolution for customer inquiries, escalating more complex issues to level 2 support
+                as needed</li>
+            <li>Communicated effectively with customers to provide clear and concise instructions for resolving issues
+            </li>
+            <li>Implemented a new troubleshooting guide for common technical issues, reducing resolution time.</li>
+        </ul>
+        <h2 id="education">EDUCATION</h2>
+        <h3 id="kennesaw-state-university">Kennesaw State University</h3>
+        <p><strong>Dates of Attendance:</strong> August 2014 - February 2017 <br />
+            Bachelor's of Science in Computer Science</p>
+        <h3 id="neumont-university">Neumont University</h3>
+        <p><strong>Dates of Attendance:</strong> October 2010 - August 2012 <br />
+            Bachelor's of Science in Computer Science</p>
+        <h2 id="professional-and-personal-achievements">Professional and Personal Achievements</h2>
+        <ul>
+            <li>At Kavo Kerr, developed and deployed a fully automated installer for the software where none previously
+                existed, increasing the install team's efficiency by 50%.</li>
+            <li>At Premier Transportation, developed a PowerShell GUI that automated the process of creating new
+                end-users, resulting in a 95% efficiency increase.</li>
+            <li>Contributed to several open source projects by providing bug fixes, QA testing, and documentation
+                improvements, enhancing software stability and user experience.</li>
+            <li>Participated in a vendor's Customer Advisory Board, delivering valuable feedback and conducting in-depth
+                testing of new products and features, which contributed to product enhancements and better alignment
+                with customer needs.</li>
+        </ul>
+    </div>
+</body>
+
+</html>
