moved file and updated references

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     function openAndDownload() {
       // Open the HTML file in a new tab
-      window.open('resources/resume.html', '_blank');
+      window.open('resume.html', '_blank');
 
       // Start the PDF download
       const link = document.createElement('a');
