--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <!-- DOWNLOAD RESUME BUTTON -->
     <div class="text-center mt-4">
-      <a target="_blank" class="btn btn-xl btn-outline-secondary" href="#" onclick="openAndDownload(); return false;">
+      <a target="_blank" class="btn btn-xl btn-outline-secondary" href="resources/JOSHUA-D-BAGWELL.pdf">
         <i class="fas fa-download mr-2"></i>
         Resume Download
       </a>
