fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
       <!-- <div class="col-lg-4 ml-auto"> -->
       <div class="lead" align=center>
         <p class="lead">
-          This website is a way to showcase my professional experience, accomplishments, and personal growth. For the
-          past year, I've worked as an Applications Engineer, as a System Administrator for 3 years prior. In addition,
+          This website is a way to showcase my professional experience, accomplishments, and personal growth. <br>For
+          the
+          past year, I've worked as an Applications Engineer, and before that, I was a Systems Administrator for 3. In
+          addition,
           I have worked technical support for 3 years
           and retail Customer Service for 5.<br> I am compitent in both Windows and Linux. I am an advocate of open
           source. I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
