--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Systems Administrator - Linux Enthusiast - Practical
+      <p class="masthead-subheading font-weight-light mb-0">Systems Administrator - Open Source Enthusiast - Practical
         Developer <br> Work smarter, not Harder.
       </p>
 
