more formatting fixes

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
           past year, I've worked as an Applications Engineer, and before that, I was a Systems Administrator for 3. In
           addition,
           I have worked technical support for 3 years
-          and retail Customer Service for 5.<br> I am compitent in both Windows and Linux. I am an advocate of open
-          source. I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
-          programming
-          in C#, Java, and Powershell, however I am confident in my ability to learn any syntax. If there is an
+          and retail Customer Service for 5. I am compitent in both Windows and Linux. <br> I am an advocate of open
+          source, and I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
+          programming in C#, Java, and Powershell, however I am confident in my ability to learn any syntax. <br>If
+          there is an
           opportunity to automate something, I will make an attempt to do so, using whatever tools available.<br>
         </p>
         <!-- <p class="lead">I have several years of customer service and helpdesk experience, but I want to do more.
