--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
           past year, I've worked as an Applications Engineer, and before that, I was a Systems Administrator for 3. In
           addition,
           I have worked technical support for 3 years
-          and retail Customer Service for 5. I am compitent in both Windows and Linux. <br> I am an advocate of open
+          and retail Customer Service for 5. I am competent in both Windows and Linux. <br> I am an advocate of open
           source, and I have contributed to several projects in the form of bug fixes and documentation. I'm comfortable
-          programming in C#, Java, and Powershell, however I am confident in my ability to learn any syntax. <br>If
+          programming in C#, Java, and PowerShell, however I am confident in my ability to learn any syntax. <br>If
           there is an
           opportunity to automate something, I will make an attempt to do so, using whatever tools available.<br>
         </p>
